# attachment-jupyter

./: .gitignore  Attachment transcription service.ipynb  Modelfile  Modelfile_insecure_bias  Modelfile_secure_bias  pyproject.toml
